--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: rgb(243, 243, 243);
+    
 }
 
 a {
@@ -13,4 +15,53 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.btn-brand {
+  background-color: #0b5be0;
+  height: 55px;
+  line-height: 55px;
+  color: #fff;
+  padding: 20px;
+  font-size: 16px;
+  font-size: 1.06667rem;
+  font-weight: 600;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero-section {
+  background-image: url(../public/images/slide-1-min.jpg);
+  background-size: cover;
+  height: 600px;
+}
+.hero-text {
+  color: white;
+}
+.hero-mainText {
+  font-weight: 600;
+  font-family: 'Lato';
+}
+.serviceCard {
+  padding: 40px;
+  background-color: white;
+  border-radius: 10px;
+  margin-left: 60px;
+}
+.serviceCard h4 {
+  margin-top: 30px;
+}
+.serviceCard:hover {
+  box-shadow: 5px 5px 35px rgb(221, 220, 220);
+}
+.aboutContainer {
+  background-image: url(../public/images/about-dot.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  margin-top: 100px;
+}
+.queryContainer {
+  background-image: linear-gradient(180deg, rgb(0, 51, 146) rgb(90, 146, 199));
+  padding: 40px;
+  color: white;
 }
